WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145898
Web Inspector: CRASH trying to inspect text that was removed/replaced
https://bugs.webkit.org/show_bug.cgi?id=145898
Summary
Web Inspector: CRASH trying to inspect text that was removed/replaced
Joseph Pecoraro
Reported
2015-06-11 14:25:56 PDT
* SUMMARY Trying to inspect an element via the Context Menu but that element is removed causes a crash. * TEST <body> <script> var i = 0; var box = document.body.appendChild(document.createElement("p")); var span = box.appendChild(document.createElement("span")); setInterval(function() { span.textContent = (i++) + " seconds"; }, 500); </script> * STEPS TO REPRODUCE 1. Load test 2. Right click the "N seconds" text and wait a second for it to change 3. Select "Inspect Element" => CRASH * NOTES - We assume the focus node is in the document, but it may not be by the time Inspect Element is triggered.
Attachments
[PATCH] Proposed Fix
(1.84 KB, patch)
2015-06-11 14:28 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2015-06-11 14:26:25 PDT
<
rdar://problem/18921081
>
Joseph Pecoraro
Comment 2
2015-06-11 14:28:46 PDT
Created
attachment 254758
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 3
2015-06-12 09:49:34 PDT
Comment on
attachment 254758
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 254758 Committed
r185507
: <
http://trac.webkit.org/changeset/185507
>
WebKit Commit Bot
Comment 4
2015-06-12 09:49:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug