Web Inspector: CRASH trying to inspect text that was removed/replaced https://bugs.webkit.org/show_bug.cgi?id=145898

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-06-12
Reviewed by Darin Adler.

* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::inspect):
(WebCore::InspectorDOMAgent::focusNode):
Ensure we only cause focusNode with a node to focus. If the original
node that was provided is no longer in the document, then we won't
actually find a node to inspect.

Canonical link: https://commits.webkit.org/163972@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185507 268f45cc-cd09-0410-ab3c-d52691b4dbfc